Using oms asyn driver

--- a/TS99I-CS-IOC-01App/src/Makefile
+++ b/TS99I-CS-IOC-01App/src/Makefile
@@ -23,6 +23,7 @@ TS99I-CS-IOC-01_DBD += Hy8401ip.dbd
 TS99I-CS-IOC-01_DBD += Hy8403ip.dbd
 TS99I-CS-IOC-01_DBD += DLS8515.dbd
 TS99I-CS-IOC-01_DBD += DLS8512.dbd
+TS99I-CS-IOC-01_DBD += omsAsynMotor.dbd
 TS99I-CS-IOC-01_DBD += asyn.dbd
 TS99I-CS-IOC-01_DBD += drvAsynSerialPort.dbd
 TS99I-CS-IOC-01_DBD += stream.dbd
@@ -72,6 +73,7 @@ TS99I-CS-IOC-01_LIBS += DLS8512
 TS99I-CS-IOC-01_LIBS += utility
 TS99I-CS-IOC-01_LIBS += Ipac
 TS99I-CS-IOC-01_LIBS += oms
+TS99I-CS-IOC-01_LIBS += omsAsynMotor
 TS99I-CS-IOC-01_LIBS += motor
 TS99I-CS-IOC-01_LIBS += genSub
 TS99I-CS-IOC-01_LIBS += calc
